Avoid top get duplicate java files par of the SourceSet (#104)
* Add as Test class comments the commands to be used using the CLI or openrewrite mvn goal
* Add the log manager dependencies for quarkus:dev but we still got: slf4j binding issue
* Replace the full list of the property: plain-text-masks and commented it within the properties file.
* Refactor the code to avoid to include duplicate resources part of the sourceFiles. Simplified the list of the PlainTextMasks
* Add missing rewrite command to the test class

Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>